--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Rock+3D&display=swap" rel="stylesheet">
-    <meta name="theme-color" content="#000000" />
-    <title>HorrorMoviesToday</title>
-</head>
-
+    <link href="https://fonts.googleapis.com/css2?family=Eater&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+    <title>Profundum</title>
 <body>
     <noscript>
         You need to enable JavaScript to run this app.
