--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Eater&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
-    <title>Profundum</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100&family=Bebas+Neue&display=swap" rel="stylesheet">    <title>Profundum</title>
+
 <body>
     <noscript>
         You need to enable JavaScript to run this app.
