--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100&family=Bebas+Neue&display=swap" rel="stylesheet">    <title>Profundum</title>
+    <title>QUARTO 237</title>
 
 <body>
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
     <div id="root">
-        <!-- This div is where our app will run -->
     </div>
 </body>
 
