--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="icon" type="imagem/png" href="assets/imagens/FAV2.png" />
+
     <title>QUARTO 237</title>
 </head>
 
