--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="icon" type="imagem/png" href="assets/imagens/FAV2.png" />
 
-    <title>QUARTO 237</title>
+    <title>VHS 404</title>
 </head>
 
 <body>
